--- a/pom.xml
+++ b/pom.xml
@@ -239,8 +239,7 @@
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
-				</configuration
-				>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
